:children_crossing: update realisations to display description in a popup and not on scroll, fix no horizontal padding in mobile, and move hero nam to a little in left to keep alignment with cta

--- a/src/assets/css/sections/realisations/_realisations-list.scss
+++ b/src/assets/css/sections/realisations/_realisations-list.scss
@@ -1,3 +1,4 @@
+@use "../../partials/functions";
 @use "../../partials/mixins";
 
 .realisations-list {
@@ -60,15 +61,9 @@
       width: 100%;
       aspect-ratio: 16/9;
       padding: 20px;
-      overflow-y: auto;
-      scrollbar-width: none;
 
       @media screen and (max-width: 991px) {
         padding: 10px;
-      }
-
-      &::-webkit-scrollbar {
-        display: none;
       }
     }
 
@@ -77,6 +72,7 @@
       justify-content: center;
       align-items: center;
       position: absolute;
+      z-index: 2;
       top: 0;
       left: 0;
       width: 100%;
@@ -130,30 +126,98 @@
       }
     }
 
-    &__texts {
-      margin-top: 20px;
+    &__details-button {
+      @include mixins.resetButton(3px solid var(--black), var(--white));
+      border-radius: 50%;
+      position: absolute;
+      right: 30px;
+      bottom: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+
+      @media screen and (max-width: 767px) {
+        right: 20px;
+        bottom: 20px;
+        width: 40px;
+        height: 40px;
+
+        svg {
+          width: 19px;
+        }
+      }
+    }
+
+    &__popup {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(40, 40, 38, 0.60);
+
+      &-content {
+        position: relative;
+        padding: functions.rem(20);
+        background: var(--white);
+        border-radius: 20px;
+        width: 90%;
+        max-width: 700px;
+
+        @media screen and (max-width: 767px) {
+          width: 100%;
+          height: 100%;
+          border-radius: 0;
+        }
+
+        button {
+          position: absolute;
+          top: functions.rem(20);
+          right: functions.rem(20);
+          @include mixins.resetButton(transparent, none);
+
+          @media screen and (max-width: 767px) {
+            right: functions.rem(10);
+          }
+        }
+      }
     }
 
     &__title {
       @include mixins.font-type("title");
+      padding-right: 40px;
+
+      @media screen and (max-width: 767px) {
+        padding-right: 20px;
+      }
     }
 
     &__description {
       @include mixins.font-type("medium text");
       margin-top: 6px;
+
+      a {
+        color: var(--red);
+        text-decoration: underline;
+
+        &:hover {
+          text-decoration: none;
+        }
+      }
     }
 
     &__technologies {
-      display: flex;
-      gap: 15px;
-      margin-top: 20px;
-    }
+      @include mixins.font-type("small text");
+      margin-top: functions.rem(30);
 
-    &__technology-icon {
-      height: 60px;
-
-      @media screen and (max-width: 991px) {
-        height: 40px;
+      @media screen and (max-width: 767px) {
+        margin-top: functions.rem(12);
       }
     }
   }
